--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -56,4 +56,7 @@
     <!-- Strings related to dashboard -->
     <string name="dashboard_redeem_tab_title">REDEEM POINT</string>
     <string name="dashboard_earn_tab_title">DAPATKAN POINT</string>
+
+    <!-- push notif properties -->
+    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
 </resources>
